# Factory-Intelligence-Platform

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  FILE_INDEX.md  GOVERNANCE.md  LICENSE  Makefile  PLANS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-epic.yml  02-feature.yml  03-task.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
apps/web/: README.md  package-lock.json  package.json  playwright.config.ts
docs/: API_DESIGN.md  ARCHITECTURE.md  CODEX_LOCAL_SETUP.md  DATA_CONTRACTS.md  DEMO_RUNBOOK.md  DEVELOPMENT.md  DOCUMENTATION.md  DOMAIN_MODEL.md  EVIDENCE_TIMELINE_API_CONTRACT.md  GOVERNED_ACTIONS.md  LEARNING_LOG.md  LEARNING_MODE.md  MVP_SCOPE.md  OBSERVABILITY.md  PRODUCT_REQUIREMENTS.md  PROJECT_FOUNDATION.md  SECURITY_MODEL.md  START_HERE_FOR_CODEX.md  TESTING.md  UNIFIED_NAMESPACE.md
docs/decisions/: 0001-platform-architecture.md  ADR_TEMPLATE.md  README.md
docs/demo/: MANUFACTURER_DEMO_RUNBOOK.md  (+2 more)
prompts/: 00-repo-inspection-and-plan.md  01-repository-foundation.md  02-shared-event-contracts.md  03-synthetic-factory-simulator.md  04-ingestion-service.md  05-api-service.md  06-process-sentinel.md  07-evidence-timeline.md  08-governed-recommendations.md  09-web-workbench.md  10-rca-capa-draft.md  11-e2e-tests.md  12-documentation-hardening.md  13-review-and-refactor.md  README.md
(+63 files in other folders)
