[project]
name = "factory-intelligence-platform"
version = "0.1.0"
description = "Simulator-backed Factory Intelligence Platform MVP skeleton."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = [
  "packages/factory-events/tests",
  "services/simulator/tests",
  "services/ingestion/tests",
  "services/process-sentinel/tests",
  "services/api/tests",
]
pythonpath = [
  "packages/factory-events",
  "services/simulator",
  "services/ingestion",
  "services/process-sentinel",
  "services/api",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

